Add journal info.

--- a/_publications/2024-s2wav.md
+++ b/_publications/2024-s2wav.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publication/2024-s2wav
 excerpt:
 date: 2024-03-14
-venue:
+venue: 'Submitted to the Open Journal of Astrophysics'
 paperurl: 'https://arxiv.org/abs/2402.01282'
 ---
 
